examples/passing/QualifiedNames/Either.purs
module Either where

import Prelude

data Either a b = Left a | Right b
